Store settings in a map